--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,7 +17,7 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
+  cname: status.scriptor-artis.fr
   # baseUrl: /your-repo-name
   logoUrl: https://clavus.io/static/svg/homepage/logo.svg
   name: Upptime
