--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,7 +4,7 @@ repo: upptime # The name of this repository
 
 sites:
   - name: Clavus API
-    url: https://api-v2.clavus.io
+    url: https://api-v2.clavus.io/health
   - name: Clavus Website (1)
     url: https://www.clavus.io
   - name: Clavus Front-end (2)
@@ -12,7 +12,7 @@ sites:
   - name: Tzar Website
     url: https://www.tzar.fr
   - name: Tzar API
-    url: https://api.tzar.fr
+    url: https://api.tzar.fr/health
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
