--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,14 +5,45 @@ repo: upptime # The name of this repository
 sites:
   - name: Clavus API
     url: https://api-v2.clavus.io/health
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 404
   - name: Clavus Website (1)
     url: https://www.clavus.io
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 404
   - name: Clavus Front-end (2)
     url: https://tzar.clavus.cloud
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 404
   - name: Tzar Website
     url: https://www.tzar.fr
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 404
   - name: Tzar API
     url: https://api.tzar.fr/health
+    expectedStatusCodes:
+      - 200
+      - 201
+      - 404
+   - name: SMTP
+     check: "tcp-ping"
+     url: 163.172.93.27
+     port: 465
+   - name: SMTP 2
+     check: "tcp-ping"
+     url: 163.172.44.120
+     port: 465
+   - name: Webmail 1
+     url: https://webmail.clavus.io
+     
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -20,9 +51,9 @@ status-website:
   cname: status.scriptor-artis.fr
   # baseUrl: /your-repo-name
   logoUrl: https://clavus.io/static/svg/homepage/logo.svg
-  name: Upptime
-  introTitle: "Clavus monitoring **Upptime**."
-  introMessage: "Cette page affiche l'état des services de scriptor-artis"
+  name: Scriptor-artis
+  introTitle: "Services **Upptime**"
+  introMessage: "Affiche l'état des serveurs de scriptor-artis."
   navbar:
     - title: Status
       href: /
