--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: xonlly # Your GitHub organization or username, where this repository lives
-repo: status.scriptor-artis.fr # The name of this repository
+owner: scriptor-group # Your GitHub organization or username, where this repository lives
+repo: status # The name of this repository
 
 sites:
   - name: Scriptor-artis Website
